More readme tweaks

--- a/README.ipynb
+++ b/README.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "from rich.pretty import install\n",
+    "# Use rich to pretty print outputs, but truncate nested objects\n",
+    "install(max_depth=2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,18 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'primaryAccession'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'A0A088CK67'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'genes'</span>: <span style=\"color: #808000; text-decoration-color: #808000\">...</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'sequence'</span>: <span style=\"color: #808000; text-decoration-color: #808000\">...</span><span style=\"font-weight: bold\">}</span>\n",
+       "</pre>\n"
+      ],
       "text/plain": [
-       "{'primaryAccession': 'A0A088CK67',\n",
-       " 'genes': [{'geneName': {'evidences': [{'evidenceCode': 'ECO:0000313',\n",
-       "      'source': 'EMBL',\n",
-       "      'id': 'AID67672.1'}],\n",
-       "    'value': 'ftsH'}}],\n",
-       " 'sequence': {'length': 5242}}"
+       "\u001b[1m{\u001b[0m\u001b[32m'primaryAccession'\u001b[0m: \u001b[32m'A0A088CK67'\u001b[0m, \u001b[32m'genes'\u001b[0m: \u001b[33m...\u001b[0m, \u001b[32m'sequence'\u001b[0m: \u001b[33m...\u001b[0m\u001b[1m}\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -113,30 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# TODO: once https://github.com/Textualize/rich/issues/2485 and https://github.com/Textualize/rich/issues/2486\n",
-    "# are closed, we can change to using Rich's pretty printing\n",
-    "from rich.pretty import install\n",
-    "\n",
-    "install(max_depth=1)\n",
-    "\n",
-    "# This replaces the default Jupyter print with pprint, which elides deep nested objects for concision\n",
-    "# import pprint\n",
-    "# printer = pprint.PrettyPrinter(depth=1, indent=4)\n",
-    "# for key in [\"text/html\", \"text/markdown\"]:\n",
-    "#      get_ipython().display_formatter.formatters[key].for_type(object, printer.pformat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -420,24 +411,25 @@
     {
      "data": {
       "text/html": [
-       "[   {'from': 'A0PK11', 'to': 'CLRN2'},\n",
-       "    {'from': 'A0JP26', 'to': 'POTEB3'},\n",
-       "    {'from': 'A1L190', 'to': 'SYCE3'}]"
-      ],
-      "text/markdown": [
-       "[   {'from': 'A0PK11', 'to': 'CLRN2'},\n",
-       "    {'from': 'A0JP26', 'to': 'POTEB3'},\n",
-       "    {'from': 'A1L190', 'to': 'SYCE3'}]"
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"font-weight: bold\">[</span>\n",
+       "    <span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'from'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'A0PK11'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'to'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'CLRN2'</span><span style=\"font-weight: bold\">}</span>,\n",
+       "    <span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'from'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'A0JP26'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'to'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'POTEB3'</span><span style=\"font-weight: bold\">}</span>,\n",
+       "    <span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'from'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'A1L190'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'to'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'SYCE3'</span><span style=\"font-weight: bold\">}</span>\n",
+       "<span style=\"font-weight: bold\">]</span>\n",
+       "</pre>\n"
       ],
       "text/plain": [
-       "[{'from': 'A0PK11', 'to': 'CLRN2'},\n",
-       " {'from': 'A0JP26', 'to': 'POTEB3'},\n",
-       " {'from': 'A1L190', 'to': 'SYCE3'}]"
+       "\n",
+       "\u001b[1m[\u001b[0m\n",
+       "    \u001b[1m{\u001b[0m\u001b[32m'from'\u001b[0m: \u001b[32m'A0PK11'\u001b[0m, \u001b[32m'to'\u001b[0m: \u001b[32m'CLRN2'\u001b[0m\u001b[1m}\u001b[0m,\n",
+       "    \u001b[1m{\u001b[0m\u001b[32m'from'\u001b[0m: \u001b[32m'A0JP26'\u001b[0m, \u001b[32m'to'\u001b[0m: \u001b[32m'POTEB3'\u001b[0m\u001b[1m}\u001b[0m,\n",
+       "    \u001b[1m{\u001b[0m\u001b[32m'from'\u001b[0m: \u001b[32m'A1L190'\u001b[0m, \u001b[32m'to'\u001b[0m: \u001b[32m'SYCE3'\u001b[0m\u001b[1m}\u001b[0m\n",
+       "\u001b[1m]\u001b[0m\n"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
