--- a/README.ipynb
+++ b/README.ipynb
@@ -12,7 +12,7 @@
    "source": [
     "from rich.pretty import install\n",
     "# Use rich to pretty print outputs, but truncate nested objects\n",
-    "install(max_depth=2)"
+    "install()"
    ]
   },
   {
@@ -50,11 +50,35 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'primaryAccession'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'A0A088CK67'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'genes'</span>: <span style=\"color: #808000; text-decoration-color: #808000\">...</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'sequence'</span>: <span style=\"color: #808000; text-decoration-color: #808000\">...</span><span style=\"font-weight: bold\">}</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"font-weight: bold\">{</span>\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'primaryAccession'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'A0A088CK67'</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'genes'</span>: <span style=\"font-weight: bold\">[</span>\n",
+       "        <span style=\"font-weight: bold\">{</span>\n",
+       "            <span style=\"color: #008000; text-decoration-color: #008000\">'geneName'</span>: <span style=\"font-weight: bold\">{</span>\n",
+       "                <span style=\"color: #008000; text-decoration-color: #008000\">'evidences'</span>: <span style=\"font-weight: bold\">[{</span><span style=\"color: #008000; text-decoration-color: #008000\">'evidenceCode'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'ECO:0000313'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'source'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'EMBL'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'id'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'AID67672.1'</span><span style=\"font-weight: bold\">}]</span>,\n",
+       "                <span style=\"color: #008000; text-decoration-color: #008000\">'value'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'ftsH'</span>\n",
+       "            <span style=\"font-weight: bold\">}</span>\n",
+       "        <span style=\"font-weight: bold\">}</span>\n",
+       "    <span style=\"font-weight: bold\">]</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'sequence'</span>: <span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'length'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">5242</span><span style=\"font-weight: bold\">}</span>\n",
+       "<span style=\"font-weight: bold\">}</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m{\u001b[0m\u001b[32m'primaryAccession'\u001b[0m: \u001b[32m'A0A088CK67'\u001b[0m, \u001b[32m'genes'\u001b[0m: \u001b[33m...\u001b[0m, \u001b[32m'sequence'\u001b[0m: \u001b[33m...\u001b[0m\u001b[1m}\u001b[0m\n"
+       "\n",
+       "\u001b[1m{\u001b[0m\n",
+       "    \u001b[32m'primaryAccession'\u001b[0m: \u001b[32m'A0A088CK67'\u001b[0m,\n",
+       "    \u001b[32m'genes'\u001b[0m: \u001b[1m[\u001b[0m\n",
+       "        \u001b[1m{\u001b[0m\n",
+       "            \u001b[32m'geneName'\u001b[0m: \u001b[1m{\u001b[0m\n",
+       "                \u001b[32m'evidences'\u001b[0m: \u001b[1m[\u001b[0m\u001b[1m{\u001b[0m\u001b[32m'evidenceCode'\u001b[0m: \u001b[32m'ECO:0000313'\u001b[0m, \u001b[32m'source'\u001b[0m: \u001b[32m'EMBL'\u001b[0m, \u001b[32m'id'\u001b[0m: \u001b[32m'AID67672.1'\u001b[0m\u001b[1m}\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "                \u001b[32m'value'\u001b[0m: \u001b[32m'ftsH'\u001b[0m\n",
+       "            \u001b[1m}\u001b[0m\n",
+       "        \u001b[1m}\u001b[0m\n",
+       "    \u001b[1m]\u001b[0m,\n",
+       "    \u001b[32m'sequence'\u001b[0m: \u001b[1m{\u001b[0m\u001b[32m'length'\u001b[0m: \u001b[1;36m5242\u001b[0m\u001b[1m}\u001b[0m\n",
+       "\u001b[1m}\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -144,6 +168,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "install(max_depth=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -413,18 +450,18 @@
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
        "<span style=\"font-weight: bold\">[</span>\n",
-       "    <span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'from'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'A0PK11'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'to'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'CLRN2'</span><span style=\"font-weight: bold\">}</span>,\n",
+       "    <span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'from'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'A1L190'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'to'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'SYCE3'</span><span style=\"font-weight: bold\">}</span>,\n",
        "    <span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'from'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'A0JP26'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'to'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'POTEB3'</span><span style=\"font-weight: bold\">}</span>,\n",
-       "    <span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'from'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'A1L190'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'to'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'SYCE3'</span><span style=\"font-weight: bold\">}</span>\n",
+       "    <span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'from'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'A0PK11'</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'to'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'CLRN2'</span><span style=\"font-weight: bold\">}</span>\n",
        "<span style=\"font-weight: bold\">]</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
        "\n",
        "\u001b[1m[\u001b[0m\n",
-       "    \u001b[1m{\u001b[0m\u001b[32m'from'\u001b[0m: \u001b[32m'A0PK11'\u001b[0m, \u001b[32m'to'\u001b[0m: \u001b[32m'CLRN2'\u001b[0m\u001b[1m}\u001b[0m,\n",
+       "    \u001b[1m{\u001b[0m\u001b[32m'from'\u001b[0m: \u001b[32m'A1L190'\u001b[0m, \u001b[32m'to'\u001b[0m: \u001b[32m'SYCE3'\u001b[0m\u001b[1m}\u001b[0m,\n",
        "    \u001b[1m{\u001b[0m\u001b[32m'from'\u001b[0m: \u001b[32m'A0JP26'\u001b[0m, \u001b[32m'to'\u001b[0m: \u001b[32m'POTEB3'\u001b[0m\u001b[1m}\u001b[0m,\n",
-       "    \u001b[1m{\u001b[0m\u001b[32m'from'\u001b[0m: \u001b[32m'A1L190'\u001b[0m, \u001b[32m'to'\u001b[0m: \u001b[32m'SYCE3'\u001b[0m\u001b[1m}\u001b[0m\n",
+       "    \u001b[1m{\u001b[0m\u001b[32m'from'\u001b[0m: \u001b[32m'A0PK11'\u001b[0m, \u001b[32m'to'\u001b[0m: \u001b[32m'CLRN2'\u001b[0m\u001b[1m}\u001b[0m\n",
        "\u001b[1m]\u001b[0m\n"
       ]
      },
